# cookcode

code/applyPCA/: CMakeCache.txt  Makefile  cmake_install.cmake
code/applyPCAcopy/: CMakeCache.txt  Makefile  cmake_install.cmake
code/bresizeRAW/: CMakeCache.txt  Makefile  cmake_install.cmake
code/cresizeRAWusingOpenCV/: CMakeCache.txt  Makefile  cmake_install.cmake
code/estimateAccuracy/: CMakeCache.txt  Makefile  cmake_install.cmake
code/histoCropValid/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/old/cpp/: .txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/old/cpp/src/: CMakeLists.txt  Makefile  cmake_install.cmake  patchmatch  patchmatch.cpp
lib/IO/: buffer2dIO.exr.detail.h  buffer2dIO.exr.h  buffer2dIO.h  buffer2dIO.jpg.h  buffer2dIO.pfm.h  buffer2dIO.png.h  buffer2dIO.ppm.h  buffer2dIO.raw.h  imageIO.inline.h
lib/container/: buffer2d.h
lib/math/: vec2d.h  vec2d.inline.h
lib/util/: Endian.detail.h  Endian.h  iteratorWrapper.h
pythoncode/: crfEstimationUsingCNNmodel.py  estimateCrffromDifferentTestSceneAccuracy.py  trainListPngForClassifyCRF0111.py
pythoncode/90classes/: crfEstimationUsingCNNmodel.py  crfEstimationUsingCNNmodelfromCplusplus0214.py  crfEstimationUsingCNNmodeltodifFolders.py  trainListPngForClassifyCRF0119.py
pythoncode/allclasses/: crfEstimationUsingCNNmodelandMulWindows0213.py  crfEstimationUsingCNNmodelfromCplusplus0214.py  cropTrainingDataRandom.py  estimateCrffromDifferentTestSceneAccuracy.py  plotConfidenceAndPCAdistance.py  randCropForClassifyCRF.py  (+1 more)
(+55 files in other folders)
